# coffee-chat-discord-bot

./: .env.example  .env.sample  .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  bot.py  channel_restriction.md  create_shortcut.ps1  create_shortcut_revised.ps1  database.py  generate_oauth_url.py  interactions_endpoint.py  keep_alive.py  pyproject.toml  replit.nix  requirements.txt  setup_replit.md  start_coffee_bot.ps1  web_server.py
cogs/: coffee_commands.py  error_handler.py  message_handler_cog.py
database/: __init__.py  db_operations.py  db_setup.py
docs/: index.html  privacy.html  terms.html
utils/: __init__.py  message_handler.py  status_updater.py  ui.py
