[tool.poetry]
name = "coffee-chat-discord-bot"
version = "1.0.0"
description = "A Discord bot that facilitates professional networking through structured, bot-mediated coffee chat interactions across servers"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord-py = "^2.0.0"
aiosqlite = "^0.17.0"
python-dotenv = "^0.19.0"
flask = "^2.0.0"
pynacl = "^1.5.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
